kubernetes/apps/observability/exporters/blackbox-exporter/app/httproute.yaml
---
# yaml-language-server: $schema=https://home-kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: blackbox-exporter
spec:
  hostnames:
    - "blackbox.${SECRET_DOMAIN}"
  parentRefs:
    - name: envoy-internal
      namespace: network
      sectionName: https
  rules:
    - backendRefs:
        - name: blackbox-exporter
          namespace: observability
          port: 9115
